发送邮件功能，邮件HTML模板

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 # 把com.zzkk.community包下所有程序日志级别设置为debug
 logging.level.com.zzkk.community = debug;
+
+# mailProperties
+spring.mail.host=smtp.sina.com
+spring.mail.port=465
+spring.mail.username=offercommunity@sina.com
+spring.mail.password=
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
