加上日志文件，个人信息设置，发送账号激活。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,19 +15,29 @@ spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 
 # MybatisProperties
+# mapper配置文件位置 类路径
 mybatis.mapper-locations=classpath:mapper/*.xml
+# 返回对象的别名
 mybatis.type-aliases-package=com.zzkk.community.entity
+# 开启自增长主键
 mybatis.configuration.use-generated-keys=true
 # 使实体类驼峰命名法与数据库表中的字段匹配 header_url headerUrl
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# 把com.zzkk.community包下所有程序日志级别设置为debug
-logging.level.com.zzkk.community = debug;
+## 把com.zzkk.community包下所有程序日志级别设置为debug 使用logback-spring.xml文件配置
+#logging.level.com.zzkk.community = debug;
+## 设置日志存储文件
+#logging.file.name=d:/work/data/zzkk/community.log
 
 # mailProperties
 spring.mail.host=smtp.sina.com
 spring.mail.port=465
 spring.mail.username=offercommunity@sina.com
-spring.mail.password=
+spring.mail.password=0e2cf19de6d52f70
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# 配置网站的域名
+community.path.domain = http://localhost:8080
+# 上传图片存放的位置
+community.path.upload = d:/work/data/upload
