--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,14 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 community.path.domain = http://localhost:8080
 # 上传图片存放的位置
 community.path.upload = d:/work/data/upload
+
+# redisProperties
+spring.redis.database=0
+spring.redis.port=6379
+spring.redis.host=localhost
+
+# kafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
