--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,41 @@ spring.kafka.consumer.auto-commit-interval=3000
 # elasticsearchProperties
 spring.data.elasticsearch.cluster-name=nowcoder
 spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+
+# TaskExecutionProperties
+spring.task.execution.pool.core-size=5
+spring.task.execution.pool.max-size=15
+spring.task.execution.pool.queue-capacity=100
+
+## TaskSchedulingProperties
+#spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# wk
+wk.image.command = D:/developer_tools/wkhtmltopdf/bin/wkhtmltoimage
+wk.image.storage = D:/work/data/wk/wk-images
+
+#qiniu
+qiniu.key.access = qjB3XE3hFy8Zkcurx9Ai_K2AUTNwH629qzdEWw94
+qinniu.key.secret = c-L40cfWC807sHHPOU8_5u0zhRNGHKeClPK2lsJb
+qiniu.bucket.header.name = com-headerurl
+qinniu.bucket.header.url = http://r06cnz4pp.hn-bkt.clouddn.com
+qiniu.bucket.share.name = com-shareurl
+qinniu.bucket.share.url = http://r06clupkd.hn-bkt.clouddn.com
+
+# caffeine
+caffein.post.max-size = 15
+caffeine.post.expire-seconds = 180
+
+# actuator
+management.endpoints.web.exposure.include = *
+management.endpoints.web.exposure.exclude=info,cache
